--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -7,5 +7,6 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NVorbis" version="0.8.5.0" targetFramework="net451" />
+  <package id="PortableWebDavLibrary" version="0.6.0" targetFramework="net451" />
   <package id="WebDav.Client" version="1.0.4.0" targetFramework="net451" />
 </packages>
