--- a/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
+++ b/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
@@ -77,8 +77,8 @@
       <HintPath>..\..\packages\PortableWebDavLibrary.0.6.1\lib\DecaTec.WebDav.NetFx.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="MediaInfo.Wrapper, Version=0.7.91.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\MediaInfo.Wrapper.0.7.91\lib\net40\MediaInfo.Wrapper.dll</HintPath>
+    <Reference Include="MediaInfo.DotNetWrapper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\MediaInfo.DotNetWrapper.1.0.0.0\lib\net40\MediaInfo.DotNetWrapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -188,10 +188,12 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
+    <Error Condition="!Exists('..\..\packages\MediaInfo.Native.0.7.91.1\build\MediaInfo.Native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\MediaInfo.Native.0.7.91.1\build\MediaInfo.Native.targets'))" />
   </Target>
-  <PropertyGroup>
+  <Import Project="..\..\packages\MediaInfo.Native.0.7.91.1\build\MediaInfo.Native.targets" Condition="Exists('..\..\packages\MediaInfo.Native.0.7.91.1\build\MediaInfo.Native.targets')" />
+  <!--<PropertyGroup>
     <PostBuildEvent>copy "$(SolutionDir)packages\MediaInfo.Native.0.7.91\build\native\$(PlatformName)\*.dll" "$(TargetDir)"</PostBuildEvent>
-  </PropertyGroup>
+  </PropertyGroup>-->
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
