--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="ByteSize" version="1.2.4" targetFramework="net451" />
   <package id="CSCore" version="1.1.0" targetFramework="net451" />
-  <package id="MediaInfo.Native" version="0.7.91" targetFramework="net451" />
-  <package id="MediaInfo.Wrapper" version="0.7.91" targetFramework="net451" />
+  <package id="MediaInfo.DotNetWrapper" version="1.0.0.0" targetFramework="net451" />
+  <package id="MediaInfo.Native" version="0.7.91.1" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
