--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net451" />
   <package id="CSCore" version="1.1.0" targetFramework="net451" />
+  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net451" />
   <package id="MediaInfo.DotNetWrapper" version="1.0.0.0" targetFramework="net451" />
   <package id="MediaInfo.Native" version="0.7.92" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
