use 'WebDAV-Client'

--- a/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
+++ b/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
@@ -109,8 +109,8 @@
     <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebDav.Client, Version=1.0.4.0, Culture=neutral, PublicKeyToken=daed9acc7deb9472, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\WebDav.Client.1.0.4.0\lib\net45\WebDav.Client.dll</HintPath>
+    <Reference Include="WebDAV-Client, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\WebDAV-Client.1.0.1.0\lib\net45\WebDAV-Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
