--- a/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
+++ b/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props" Condition="Exists('..\..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProjectGuid>{DE1CEC09-0A1E-4DDC-BD4A-8B9009C554AD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -19,25 +20,6 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\MediaPlayer-1_32x32_and_16x16.ico</ApplicationIcon>
@@ -65,10 +47,33 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ByteSize, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ByteSize.1.3.0\lib\net45\ByteSize.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Costura, Version=3.1.6.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Costura.Fody.3.1.6\lib\net46\Costura.dll</HintPath>
     </Reference>
     <Reference Include="CSCore, Version=1.2.1.2, Culture=neutral, PublicKeyToken=5a08f2b6f4415dea, processorArchitecture=MSIL">
       <HintPath>..\..\packages\CSCore.1.2.1.2\lib\net35-client\CSCore.dll</HintPath>
@@ -80,9 +85,8 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="NVorbis, Version=0.8.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NVorbis.0.8.5.0\lib\NVorbis.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="NVorbis, Version=0.8.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NVorbis.0.8.6\lib\net35\NVorbis.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -159,9 +163,46 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup Condition="'$(Platform)' == 'x86'">
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x86\libcrypto-1_1.dll">
+      <Link>costura32\libcrypto-1_1.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x86\libcurl.dll">
+      <Link>costura32\libcurl.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x86\libssh2.dll">
+      <Link>costura32\libssh2.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x86\libssl-1_1.dll">
+      <Link>costura32\libssl-1_1.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x86\MediaInfo.dll">
+      <Link>costura32\MediaInfo.dll</Link>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup Condition="'$(Platform)' == 'x64'">
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x64\libcrypto-1_1-x64.dll">
+      <Link>costura64\libcrypto-1_1-x64.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x64\libcurl.dll">
+      <Link>costura64\libcurl.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x64\libssh2.dll">
+      <Link>costura64\libssh2.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x64\libssl-1_1-x64.dll">
+      <Link>costura64\libssl-1_1-x64.dll</Link>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\packages\MediaInfo.Native.17.12\build\native\x64\MediaInfo.dll">
+      <Link>costura64\MediaInfo.dll</Link>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\MediaPlayer-1_32x32_and_16x16.ico" />
     <None Include="Resources\Drive.ico" />
+    <Content Include="FodyWeavers.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Resources\arrow_refresh.png" />
     <Content Include="Resources\control_eject.png" />
     <Content Include="Resources\control_end.png" />
@@ -176,7 +217,6 @@
     <Content Include="Resources\File.ico" />
     <Content Include="Resources\Folder.ico" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -185,8 +225,15 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
     <Error Condition="!Exists('..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Fody.3.2.17\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Fody.3.2.17\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Costura.Fody.3.1.6\build\Costura.Fody.props'))" />
   </Target>
   <Import Project="..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets" Condition="Exists('..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets')" />
+  <Import Project="..\..\packages\Fody.3.2.17\build\Fody.targets" Condition="Exists('..\..\packages\Fody.3.2.17\build\Fody.targets')" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
   <!--<PropertyGroup>
     <PostBuildEvent>copy "$(SolutionDir)packages\MediaInfo.Native.0.7.91\build\native\$(PlatformName)\*.dll" "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>-->
