--- a/src/WebDAV-AudioPlayer/App.config
+++ b/src/WebDAV-AudioPlayer/App.config
@@ -10,4 +10,12 @@
   <System.Windows.Forms.ApplicationConfigurationSection>
     <add key="DpiAwareness" value="PerMonitorV2" />
   </System.Windows.Forms.ApplicationConfigurationSection>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CSCore" publicKeyToken="5a08f2b6f4415dea" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.1.2" newVersion="1.2.1.2" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
