--- a/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
+++ b/src/WebDAV-AudioPlayer/WebDAV-AudioPlayer.csproj
@@ -66,15 +66,15 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ATL, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\z440.atl.core.2.5.0\lib\net30\ATL.dll</HintPath>
+    </Reference>
     <Reference Include="ByteSize, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ByteSize.1.3.0\lib\net45\ByteSize.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="CSCore, Version=1.2.1.2, Culture=neutral, PublicKeyToken=5a08f2b6f4415dea, processorArchitecture=MSIL">
       <HintPath>..\..\packages\CSCore.1.2.1.2\lib\net35-client\CSCore.dll</HintPath>
-    </Reference>
-    <Reference Include="MediaInfo.DotNetWrapper, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\MediaInfo.DotNetWrapper.1.0.7\lib\net40\MediaInfo.DotNetWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -99,9 +99,9 @@
   <ItemGroup>
     <Compile Include="AssemblyConfig.cs" />
     <Compile Include="Audio\MediaDetails.cs" />
-    <Compile Include="Audio\MediaInfoHelper.cs" />
     <Compile Include="Audio\Player.cs" />
     <Compile Include="Audio\NVorbisSource.cs" />
+    <Compile Include="Audio\TrackInfoHelper.cs" />
     <Compile Include="Client\IConnectionSettings.cs" />
     <Compile Include="Client\IWebDavClient.cs" />
     <Compile Include="Client\MyWebDavClient.cs" />
@@ -184,9 +184,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
-    <Error Condition="!Exists('..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets'))" />
   </Target>
-  <Import Project="..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets" Condition="Exists('..\..\packages\MediaInfo.Native.17.12\build\MediaInfo.Native.targets')" />
   <!--<PropertyGroup>
     <PostBuildEvent>copy "$(SolutionDir)packages\MediaInfo.Native.0.7.91\build\native\$(PlatformName)\*.dll" "$(TargetDir)"</PostBuildEvent>
   </PropertyGroup>-->
