--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -4,6 +4,7 @@
   <package id="Concentus" version="1.1.7" targetFramework="net472" />
   <package id="Concentus.OggFile" version="1.0.3" targetFramework="net472" />
   <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
+  <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net472" />
