--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ByteSize" version="1.3.0" targetFramework="net451" />
   <package id="Concentus" version="1.1.7" targetFramework="net472" />
+  <package id="Concentus.Oggfile" version="1.0.4" targetFramework="net472" />
   <package id="CSCore" version="1.2.1.2" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2018.3.0" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
