--- a/src/Blazor-WebDAV-AudioPlayer/Blazor-WebDAV-AudioPlayer.csproj
+++ b/src/Blazor-WebDAV-AudioPlayer/Blazor-WebDAV-AudioPlayer.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ByteSize" Version="1.3.0" />
+    <PackageReference Include="DevExpress.Blazor" Version="19.1.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
     <!--<PackageReference Include="MW.Blazor.Tree" Version="1.1.6" />-->
@@ -27,7 +29,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Audio\" />
     <Folder Include="IO\" />
     <Folder Include="Extensions\" />
