--- a/src/Blazor-WebDAV-AudioPlayer/Blazor-WebDAV-AudioPlayer.csproj
+++ b/src/Blazor-WebDAV-AudioPlayer/Blazor-WebDAV-AudioPlayer.csproj
@@ -5,15 +5,18 @@
     <RootNamespace>Blazor.WebDAV.AudioPlayer</RootNamespace>
   </PropertyGroup>
 
+  <!--<ItemGroup>
+    <Content Remove="appsettings.Development.json" />
+  </ItemGroup>-->
+
   <ItemGroup>
     <PackageReference Include="ByteSize" Version="1.3.0" />
     <PackageReference Include="CSCore" Version="1.2.1.2" />
     <PackageReference Include="CSCore.Ogg" Version="1.0.0" />
     <PackageReference Include="CSCore.Opus" Version="1.0.1" />
-    <PackageReference Include="DevExpress.Blazor" Version="19.1.10" />
+    <!--<PackageReference Include="DevExpress.Blazor" Version="19.1.10" />-->
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
-    <!--<PackageReference Include="MW.Blazor.Tree" Version="1.1.6" />-->
     <PackageReference Include="WebDAV-Client" Version="1.0.3" />
     <PackageReference Include="z440.atl.core" Version="2.14.0" />
   </ItemGroup>
@@ -38,6 +41,10 @@
     <Folder Include="IO\" />
     <Folder Include="Extensions\" />
     <Folder Include="Util\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.Development.json" />
   </ItemGroup>
 
 </Project>
