--- a/src/Blazor-WebDAV-AudioPlayer.v2/Blazor-WebDAV-AudioPlayer.v2.csproj
+++ b/src/Blazor-WebDAV-AudioPlayer.v2/Blazor-WebDAV-AudioPlayer.v2.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="ByteSize" Version="1.3.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+    <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
     <PackageReference Include="WebDAV-Client" Version="1.0.3" />
     <PackageReference Include="z440.atl.core" Version="2.14.0" />
   </ItemGroup>
