Moved Howler.Blazor to new GitHub project

--- a/src/Blazor-WebDAV-AudioPlayer.v2/Blazor-WebDAV-AudioPlayer.v2.csproj
+++ b/src/Blazor-WebDAV-AudioPlayer.v2/Blazor-WebDAV-AudioPlayer.v2.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Howler.Blazor\Howler.Blazor.csproj" />
+    <ProjectReference Include="..\..\..\Howler.Blazor\src\Howler.Blazor\Howler.Blazor.csproj" />
   </ItemGroup>
 
 </Project>
