--- a/src/Blazor-WASM-WebDAV-AudioPlayer.v2/Blazor-WASM-WebDAV-AudioPlayer.v2.csproj
+++ b/src/Blazor-WASM-WebDAV-AudioPlayer.v2/Blazor-WASM-WebDAV-AudioPlayer.v2.csproj
@@ -1,38 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <RazorLangVersion>3.0</RazorLangVersion>
     <RootNamespace>Blazor.WebDAV.AudioPlayer</RootNamespace>
+
+    <BlazorWebAssemblyEnableLinking>false</BlazorWebAssemblyEnableLinking>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Util\**" />
-    <Content Remove="Util\**" />
-    <EmbeddedResource Remove="Util\**" />
-    <None Remove="Util\**" />
-  </ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-rc1.20223.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
 
-  <ItemGroup>
-    <Compile Remove="Audio\IPlayerFactory.cs" />
-    <Compile Remove="Audio\PlayerFactory.cs" />
-    <Compile Remove="Client\IWebDavClientFactory.cs" />
-    <Compile Remove="Client\WebDavClientFactory.cs" />
-    <Compile Remove="Components\Howl.cs" />
-    <Compile Remove="Components\HowlErrorEventArgs.cs" />
-    <Compile Remove="Components\HowlEventArgs.cs" />
-    <Compile Remove="Components\HowlPlayEventArgs.cs" />
-    <Compile Remove="Components\IHowl.cs" />
-    <Compile Remove="Components\IHowlEvents.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="ByteSize" Version="2.0.0" />
     <PackageReference Include="Howler.Blazor" Version="0.9.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
     <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
-    <PackageReference Include="WebDAV-Client" Version="1.0.3" />
-    <PackageReference Include="z440.atl.core" Version="3.3.0" />
+    <PackageReference Include="z440.atl.core" Version="3.4.1" />
+
+    <PackageReference Include="WebDAV-Client" Version="1.1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,13 +36,14 @@
     <Compile Include="..\WebDAV-AudioPlayer\Models\ResourceItem.cs" Link="Models\ResourceItem.cs" />
   </ItemGroup>
 
-  <!--<ItemGroup>
+  <ItemGroup>
     <Folder Include="IO\" />
     <Folder Include="Extensions\" />
-  </ItemGroup>-->
+    <Folder Include="Options\" />
+  </ItemGroup>
 
   <!--<ItemGroup>
-    <ProjectReference Include="..\..\..\Howler.Blazor\src\Howler.Blazor\Howler.Blazor.csproj" />
+    <ProjectReference Include="..\..\..\WebDAV-Client\src\WebDAV-Client\WebDAV-Client.csproj" />
   </ItemGroup>-->
 
 </Project>
