--- a/src/Blazor-WASM-WebDAV-AudioPlayer.v2/Blazor-WASM-WebDAV-AudioPlayer.v2.csproj
+++ b/src/Blazor-WASM-WebDAV-AudioPlayer.v2/Blazor-WASM-WebDAV-AudioPlayer.v2.csproj
@@ -20,17 +20,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-rc1.20223.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-rc1.20223.4" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
 
     <PackageReference Include="ByteSize" Version="2.0.0" />
-    <PackageReference Include="Howler.Blazor" Version="0.9.2" />
+    <PackageReference Include="Howler.Blazor" Version="0.9.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.10" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.10" />
+    <PackageReference Include="RestEase" Version="1.5.2" />
     <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
-    <PackageReference Include="z440.atl.core" Version="3.4.1" />
+    <PackageReference Include="z440.atl.core" Version="3.15.0" />
 
     <PackageReference Include="WebDAV-Client" Version="1.1.1.0" />
   </ItemGroup>
@@ -40,7 +41,6 @@
     <Compile Include="..\Blazor-WebDav-FunctionsApp\Models\GetDataResult.cs" Link="Models\GetDataResult.cs" />
     <Compile Include="..\WebDAV-AudioPlayer\Audio\MediaDetails.cs" Link="Audio\MediaDetails.cs" />
     <Compile Include="..\WebDAV-AudioPlayer\Audio\TrackInfoHelper.cs" Link="Audio\TrackInfoHelper.cs" />
-    <Compile Include="..\WebDAV-AudioPlayer\Client\IWebDavClient.cs" Link="Client\IWebDavClient.cs" />
     
     <!--<Compile Include="..\WebDAV-AudioPlayer\Client\IConnectionSettings.cs" Link="Client\IConnectionSettings.cs" />
     <Compile Include="..\WebDAV-AudioPlayer\Client\IWebDavClient.cs" Link="Client\IWebDavClient.cs" />
