Update to .NET 4.8 + update some NuGet Packages

--- a/src/WebDAV-AudioPlayer/App.config
+++ b/src/WebDAV-AudioPlayer/App.config
@@ -1,20 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <appSettings>
-    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true" />
+    <add key="EnableWindowsFormsHighDpiAutoResizing" value="true"/>
   </appSettings>
   <!-- https://stackoverflow.com/questions/22735174/how-to-write-winforms-code-that-auto-scales-to-system-font-and-dpi-settings/29766847#29766847 -->
   <System.Windows.Forms.ApplicationConfigurationSection>
-    <add key="DpiAwareness" value="PerMonitorV2" />
+    <add key="DpiAwareness" value="PerMonitorV2"/>
   </System.Windows.Forms.ApplicationConfigurationSection>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="CSCore" publicKeyToken="5a08f2b6f4415dea" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2.1.2" newVersion="1.2.1.2" />
+        <assemblyIdentity name="CSCore" publicKeyToken="5a08f2b6f4415dea" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.2.1.2" newVersion="1.2.1.2"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
