--- a/src/WebDAV-AudioPlayer/packages.config
+++ b/src/WebDAV-AudioPlayer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncAwaitBestPractices" version="7.0.0" targetFramework="net48" />
   <package id="ByteSize" version="2.1.1" targetFramework="net48" />
   <package id="Concentus" version="1.1.7" targetFramework="net48" />
   <package id="Concentus.Oggfile" version="1.0.4" targetFramework="net48" />
@@ -35,6 +36,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.ObjectModel" version="4.0.12" targetFramework="net48" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
   <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net48" />
   <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net48" />
