--- a/src/CSCore.Opus/CSCore.Codecs.OPUS.csproj
+++ b/src/CSCore.Opus/CSCore.Codecs.OPUS.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>1.0.1.0</Version>
+    <Version>1.0.1.1</Version>
     <Title>OpusSource IWaveSource implementation for CSCore</Title>
     <Description>OpusSource IWaveSource implementation for CSCore</Description>
     <Authors>Stef Heyenrath</Authors>
@@ -9,9 +9,9 @@
     <PackageId>CSCore.Opus</PackageId>
     <PackageTags>cscore;opus</PackageTags>
     <PackageReleaseNotes>See CHANGELOG.md</PackageReleaseNotes>
-    <PackageIconUrl>https://raw.githubusercontent.com/StefH/WebDAV-AudioPlayer/master/resources/CSCore_Opus.png</PackageIconUrl>
+    <PackageIcon>CSCore_Opus.png</PackageIcon>
     <PackageProjectUrl>https://github.com/StefH/WebDAV-AudioPlayer</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/StefH/WebDAV-AudioPlayer/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/StefH/WebDAV-AudioPlayer</RepositoryUrl>
     <DebugType>full</DebugType>
@@ -22,12 +22,18 @@
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+    <PackageReadmeFile>PackageReadme.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <PathMap>$(MSBuildProjectDirectory)=/</PathMap>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../../resources/CSCore_Opus.png" Pack="true" PackagePath="" />
+    <None Include="./PackageReadme.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.3.0">
